Mostly Finished the Portfolio

--- a/about.html
+++ b/about.html
@@ -20,10 +20,10 @@
         <main class="about">
             <div id="about">
                 <div class="about">
-                    <img src="media/headshot.png" alt="My Headshot" />
+                    <img id="headshot" src="media/headshot.jpg" alt="My Headshot" />
                 </div>
                 <div class="about">
-                    <h2>Funny Short Sentence</h2>
+                    <h2 id="about-h2">Funny Short Sentence</h2>
                     <p>Hello! My name is Thomas Larson, and I am a sound designer and composer, specializing in asset creation and audio 
                         implementation, most recently with MAGIC Spell Studios with the team on That Damn Goat.</p>
                     <p>As a recent graduate with a Bachelor of Science in Game Design and Development, I have decided to work on building on the 
@@ -37,7 +37,7 @@
         </main>
         <!--Footer-->
         <footer class="about">
-            <p>Contact Info To Be Added</p>
+            <p>thomaslarsonbusiness@gmail.com</p>
         </footer>
     </body>
 </html>
