--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
         </main>
         <!--Footer-->
         <footer class="contact">
-            <p>Contact Info To Be Added</p>
+            <p>thomaslarsonbusiness@gmail.com</p>
         </footer>
     </body>
 </html>
