--- a/index.html
+++ b/index.html
@@ -23,15 +23,37 @@
             <img src="media/home-image.png" alt="Picture of Me"/>
 
             <!--Tagline-->
-            <h1>Sound Design, Implementation, and Mastering</h1>
+            <h1 id="tagline">Sound Design, Implementation, and Mastering</h1>
 
             <!--Featured Projects-->
-            <h2>Featured Projects</h2>
+            <h2 id="featured">Featured Projects</h2>
+
+            <div id="projects">
+                <div class="project">
+                    <img class="project-img" src="media/project1.png"/>
+                    <p class="title">That Damn Goat</p>
+                    <p class="project-body">Compete against your friends while running from a maliciously inclined goat! That Damn Goat is a splitscreen 
+                        multiplayer party game developed by a team of students at RIT, lead by a team of RIT faculty for PC and Switch. In this game, players compete 
+                        in a variety of gamemodes across a variety of maps, all while a goat does everything in its power to create chaos amongst the players. 
+                        For this project I was a sound designer and composer, responsible for creating sound effects and music for the project, as well as
+                        implementing audio assets through Wwise. <a href="https://youtu.be/UEyrjRRjBVA">Watch the Trailer</a></p>
+                </div>
+                <div class="project">
+                    <img class="project-img" src="media/project2.png"/>
+                    <p class="title">Tiny Little Files</p>
+                    <p class="project-body">Blast your way through waves of enemies and stop Victor Sells from violating the laws of magic! 
+                        Tiny Little Files is a game set in the world of the Dresden Files, done by a team of 5 members. Tiny Little Files is a bullet hell game, 
+                        where the player must fight their way through waves of enemies using two different weapons: a revolver and a blasting rod. For this project, 
+                        I was the sound designer and composer, responsible for creating all of the sound effects and music for the project. Additionally, I 
+                        was responsible for recording and implementing voice lines into the project. <a href=https://rocketcatt.itch.io/tiny-little-files>Game Here</a>
+                        </p>
+                </div>
+            </div>
         </main>
 
         <!--Footer-->
         <footer>
-            <p>Contact Info To Be Added</p>
+            <p>thomaslarsonbusiness@gmail.com</p>
         </footer>
     </body>
 </html>
