--- a/demos.html
+++ b/demos.html
@@ -18,11 +18,15 @@
             </nav>
         </header>
         <main>
-            <h1>DEMOS</h1>
+            <div>
+                <h2>Sound Design Reel</h2>
+                <iframe id="SD-Reel" width="560" height="315" src="https://www.youtube.com/embed/xG1sj1uWEIQ" title="YouTube video player" 
+                frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
         </main>
         <!--Footer-->
         <footer>
-            <p>Contact Info To Be Added</p>
+            <p>thomaslarsonbusiness@gmail.com</p>
         </footer>
     </body>
 </html>
