Finished the front page

--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
         </header>
 
         <main>
-            <!--Picture-->
-            <img src="media/home-image.png" alt="Picture of Me"/>
-
             <!--Tagline-->
+            <h1 id="name">Thomas Larson</h1>
             <h1 id="tagline">Sound Design, Implementation, and Mastering</h1>
+
+            <!--Picture-->
+            <img id="homeimg" src="media/home-image.jpg" alt="Picture of Me"/>
 
             <!--Featured Projects-->
             <h2 id="featured">Featured Projects</h2>
